--- a/css/default.css
+++ b/css/default.css
@@ -454,27 +454,27 @@ p {
     overflow-x: visible;
 }
 
-.markdown code, .src-link a {
-    background: #f6f6f6;
+.markdown pre > code {
+    display: block;
+    padding: 10px;
+}
+
+.markdown pre > code, .src-link a {
     border: 1px solid #e4e4e4;
     border-radius: 2px;
 }
 
-.markdown pre, pre.deps {
-    background: #f4f4f4;
-    border: 1px solid #e0e0e0;
-    border-radius: 2px;
-    padding: 5px 10px;
-    margin: 0 10px;
+.markdown code:not(.hljs), .src-link a {
+    background: #f6f6f6;
 }
 
 pre.deps {
     display: inline-block;
-}
-
-.markdown pre code {
-    background: transparent;
-    border: none;
+    margin: 0 10px;
+    border: 1px solid #e4e4e4;
+    border-radius: 2px;
+    padding: 10px;
+    background-color: #f6f6f6;
 }
 
 .markdown hr {
